# node2glsl

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-debug.sh  flake.nix  imgui.ini
demos/: CMakeLists.txt
demos/sdl3/: CMakeLists.txt  main.cpp
demos/sdl3gpu/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/viewer/: CMakeLists.txt  main.cpp  shader.cpp  shader.h
src/viewer/shader/: def.vert
